# rust-live2d_opengl

./: Cargo.toml  README.md
live2d_opengl/: Cargo.toml  README.md
live2d_opengl-sys/: Cargo.toml  README.md  build.rs
live2d_opengl-sys/examples/: show_version.rs
live2d_opengl-sys/src/: a_live2d_model.rs  a_motion.rs  lib.rs  live2d.rs  live2d_model_wingl.rs  live2d_motion.rs  motion_queue_manager.rs  wrapper.cpp
live2d_opengl-sys/wrapper/: ALive2DModel.cpp  Live2D.cpp  Live2DModelWinGL.cpp  w_common.h  wrapper.cpp
live2d_opengl-sys/wrapper/motion/: AMotion.cpp  Live2DMotion.cpp  MotionQueueManager.cpp
live2d_opengl-sys/wrapper/util/: UtSystem.cpp
live2d_opengl/src/: gl.rs  global_state.rs  lib.rs  model.rs  motion.rs
simple/: Cargo.toml
simple/src/: main.rs
