[package]
name = "live2d_opengl"
version = "0.1.0"
authors = ["azyobuzin <azyobuzin@users.sourceforge.jp>"]
publish = false

[dependencies]
glium = "0.16"
lazy_static = "0.2"
rustc-serialize = { version = "0.3", optional = true }

[dependencies.image]
version = "0.12"
optional = true
default-features = false
features = ["png_codec"]

[dependencies.live2d_opengl-sys]
version = "0.1"
path = "../live2d_opengl-sys"

[features]
default = ["model-json"]
model-json = ["image", "rustc-serialize"]
